# subsplit

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
subsplit/: __main__.py  main.py  subsplit.py
tests/: test_subsplit.py
