[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# thanks to https://stackoverflow.com/questions/72294299/
where = ["."]
include = ["subsplit"]
exclude = []
namespaces = false

[project]
name = "subsplit"
version = "0.1.0"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
